error_log.txt
   Compiling text_encryptor v0.1.0 (/home/shashank/Downloads/text_encryptor)
error: expected identifier, found reserved keyword `gen`
  --> src/main.rs:24:52
   |
24 |     let nonce_bytes: [u8; 12] = rand::thread_rng().gen();
   |                                                    ^^^ expected identifier, found reserved keyword
   |
help: escape `gen` to use it as an identifier
   |
24 |     let nonce_bytes: [u8; 12] = rand::thread_rng().r#gen();
   |                                                    ++

error[E0432]: unresolved import `aes_gcm::aead::NewAead`
 --> src/main.rs:2:27
  |
2 | use aes_gcm::aead::{Aead, NewAead};
  |                           ^^^^^^^ no `NewAead` in the root

warning: use of deprecated function `base64::encode`: Use Engine::encode
 --> src/main.rs:4:14
  |
4 | use base64::{encode, decode};
  |              ^^^^^^
  |
  = note: `#[warn(deprecated)]` on by default

warning: use of deprecated function `base64::decode`: Use Engine::decode
 --> src/main.rs:4:22
  |
4 | use base64::{encode, decode};
  |                      ^^^^^^

warning: use of deprecated function `base64::encode`: Use Engine::encode
  --> src/main.rs:34:8
   |
34 |     Ok(encode(combined))
   |        ^^^^^^

warning: use of deprecated function `base64::decode`: Use Engine::decode
  --> src/main.rs:42:27
   |
42 |     let encrypted_bytes = decode(encrypted_text)?;
   |                           ^^^^^^

error[E0599]: no function or associated item named `new` found for struct `AesGcm` in the current scope
  --> src/main.rs:21:29
   |
21 |     let cipher = Aes256Gcm::new(key);
   |                             ^^^ function or associated item not found in `AesGcm<Aes256, UInt<UInt<UInt<UInt<UTerm, B1>, B1>, B0>, B0>>`
   |
   = help: items from traits can only be used if the trait is in scope
help: trait `KeyInit` which provides `new` is implemented but not in scope; perhaps you want to import it
   |
1  + use aes_gcm::KeyInit;
   |

error[E0599]: no function or associated item named `new` found for struct `AesGcm` in the current scope
  --> src/main.rs:40:29
   |
40 |     let cipher = Aes256Gcm::new(key);
   |                             ^^^ function or associated item not found in `AesGcm<Aes256, UInt<UInt<UInt<UInt<UTerm, B1>, B1>, B0>, B0>>`
   |
   = help: items from traits can only be used if the trait is in scope
help: trait `KeyInit` which provides `new` is implemented but not in scope; perhaps you want to import it
   |
1  + use aes_gcm::KeyInit;
   |

Some errors have detailed explanations: E0432, E0599.
For more information about an error, try `rustc --explain E0432`.
warning: `text_encryptor` (bin "text_encryptor") generated 4 warnings
error: could not compile `text_encryptor` (bin "text_encryptor") due to 4 previous errors; 4 warnings emitted
